syntax = "proto3";

package testing.grpcserviceconfig;

option php_namespace = "Testing\\GrpcServiceConfig";

import "google/api/client.proto";

service GrpcServiceConfigNoRetry {
  option (google.api.default_host) = "grpcserviceconfig.example.com";

  rpc NoRetryMethod(Request) returns(Response);
}

service GrpcServiceConfig {
  option (google.api.default_host) = "grpcserviceconfig.example.com";

  rpc ServiceLevelRetryMethod(Request) returns(Response);

  rpc MethodLevelRetryMethod(Request) returns(Response);

  // TODO: Enable once streaming is supported.
  // rpc MethodWithServerRetry(Request) returns(stream Response);
  // rpc MethodWithBidiRetry(stream Request) returns(stream Response);

  rpc MethodTimeoutOnly(Request) returns(Response);
}

message Request {
}

message Response {
}
