syntax = "proto3";

package testing.basicbidistreaming;

option php_namespace = "Testing\\BasicBidiStreaming";

import "google/api/client.proto";
import "google/api/field_behavior.proto";

service BasicBidiStreaming {
  option (google.api.default_host) = "bidi.example.com";

  rpc MethodBidi(stream Request) returns(stream Response);

  rpc MethodEmpty(stream EmptyRequest) returns(stream Response);
}

message Request {
    int32 a_number = 1 [(google.api.field_behavior) = REQUIRED];
    string a_string = 2;
}

message EmptyRequest {
}

message Response {
}
