syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/cloud/extended_operations.proto";

package testing.customlro;

option php_namespace = "Testing\\CustomLro";

service CustomLro {
    option (google.api.default_host) = "customlro.example.com";
    option (google.api.oauth_scopes) = "scope1,scope2";
    rpc CreateFoo(CreateFooRequest) returns (CustomOperationResponse) {
        option (google.api.http) = {
            post: "/foo"
            body: "*"
        };
        option (google.cloud.operation_service) = "CustomLroOperations";
    }
}

service CustomLroOperations {
    option (google.api.default_host) = "customlro.example.com";
    option (google.api.oauth_scopes) = "scope1,scope2";
    rpc Get(GetOperationRequest) returns (CustomOperationResponse) {
        option (google.api.http) = {
            get: "/operation"
        };
        option (google.cloud.operation_polling_method) = true;
    }
}

message CustomOperationResponse {
    optional string name = 1 [(google.cloud.operation_field) = NAME];

    optional string http_error_message = 2 [(google.cloud.operation_field) = ERROR_MESSAGE];

    optional int32 http_error_status_code = 3 [(google.cloud.operation_field) = ERROR_CODE];

    enum Status {
        // A value indicating that the enum field is not set.
        UNDEFINED_STATUS = 0;

        DONE = 1;

        PENDING = 2;

        RUNNING = 3;
    }

    optional Status status = 4 [(google.cloud.operation_field) = STATUS];
}

message CreateFooRequest {
    string foo = 1;

    string project = 2 [(google.cloud.operation_request_field) = "project"];

    string region = 3 [(google.cloud.operation_request_field) = "region"];
}

message GetOperationRequest {
    // Name of the Operations resource to return.
  string operation = 1 [(google.cloud.operation_response_field) = "name"];

  // Project ID for this request.
  string project = 2;

  // Name of the region for this request.
  string region = 3;
}
